--- a/flights/src/components/styles/sass/pages/index.scss
+++ b/flights/src/components/styles/sass/pages/index.scss
@@ -142,7 +142,7 @@
       margin-left: -50px;
       width: 6rem;
       height: 6rem;
-      fill: red;
+      fill: $color-white;
     }
   }
   &-description {
