--- a/flights/src/components/styles/css/style.comp.css
+++ b/flights/src/components/styles/css/style.comp.css
@@ -237,7 +237,6 @@ p {
   position: absolute;
   padding: 0;
   z-index: 3000;
-  background-color: rgba(14, 14, 14, 0.6);
   height: 200vh;
   width: 100%;
   top: 0;
@@ -254,7 +253,7 @@ p {
     height: max-content; }
 
 .side {
-  background-color: white;
+  background-color: #f4f4f4;
   height: 200vh;
   width: 300px;
   padding: 1rem 0 0; }
@@ -938,7 +937,8 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; }
+    flex-direction: column;
+    min-height: 60vh; }
   .search-input {
     width: 90%;
     display: flex;
@@ -967,6 +967,14 @@ p {
     @media (min-width: 6.25em) and (max-width: 37.5em) {
       .search-btn {
         width: 300px; } }
+  .search-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem; }
+    @media (max-width: 64em) {
+      .search-header {
+        width: 96%; } }
 
 .flex {
   display: flex;
@@ -974,8 +982,13 @@ p {
   align-items: center; }
 
 .card {
-  margin: 1rem 1rem;
+  margin: 2rem 1rem;
   border: solid 1px #e6ebf1;
   padding: 1rem;
   width: 100%;
   height: auto; }
+  .card p {
+    font-size: 12px;
+    font-weight: 400; }
+  .card:hover {
+    box-shadow: 0 1rem 1rem rgba(110, 110, 110, 0.3); }
