--- a/flights/src/components/styles/sass/layout/footer.scss
+++ b/flights/src/components/styles/sass/layout/footer.scss
@@ -28,15 +28,23 @@
         }
       }
       &-btns {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
         margin-top: 2rem;
         @include respond(phone) {
+          align-items: flex-start;
+          flex-direction: column;
           margin-bottom: 1rem;
         }
         &-btn {
+          display: flex;
+          justify-content: center;
+          align-items: center;
           margin-right: 1rem;
           font-size: 16px;
           width: 16rem;
-          padding: 1.5rem 3rem;
+          padding: 1.5rem 2rem;
           color: $color-white;
           background-color: rgba($color: $color-light-purple, $alpha: 0.3);
           transition: all 0.5s;
